[metadata]
name = k8s-resource-handler
version = 0.0.1
author = Charmed Kubeflow
;author_email = author@example.com
description = A collection of helpers for Charms maintained by the Charmed Kubeflow team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/k8s-resource-handler
project_urls =
    Bug Tracker = https://github.com/canonical/k8s-resource-handler/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    jinja2
    lightkube > 0.10.0
    ops > 1.2.0

[options.extras_require]
test =
    pytest
    black

[options.packages.find]
where = src
