[metadata]
name = charmed-kubeflow-chisme
version = 0.1.0
author = Charmed Kubeflow
description = A collection of helpers for Charms maintained by the Charmed Kubeflow team
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/canonical/charmed-kubeflow-chisme
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    deepdiff<=6.2.1
    jinja2
    lightkube > 0.10.0
    ops > 1.2.0
    serialized-data-interface
    ruamel.yaml
    tenacity

[options.extras_require]
test =
    pytest
    black

[options.packages.find]
where = src
